# selfchatbot

./: README.md  pyproject.toml  setup.py
DataProcessing/: preprocess_data.py
SampleEnvironment/: .env
SampleEnvironment/selfChatBot_raw/Dataset_001_Discord_Data/: parameters.json
SampleEnvironment/selfChatBot_raw/Dataset_001_Discord_Data/DiscordChatExporter/: sample.txt
src/Classes/: TypeDicts.py  __init__.py  chat_dataset.py
src/Classes/ChatModels/: chat_model.py
src/Classes/Datasets/: chat_dataset.py
src/Classes/FineTuners/: fine_tuner.py
src/Classes/Formatters/: default_formatter.py  formatter.py  gpt2_formatter.py  mistral_formatter.py
src/Classes/Preprocessors/: discord_chat_exporter_processor.py  preprocessor.py
src/Classes/Schema/: schemas.py  validate_json.py
src/DataProcessing/: __init__.py  functional_preprocessing.py  preprocess_data.py  process_methods.py
src/DataProcessing/Preprocessors/: DiscordChatExporter.py
src/FineTune/: fine_tune.py  finetuner.py
src/FineTune/Classes/: fine_tuner.py
src/Playground/: model_play.py
src/Util/: utilities.py
