[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SelfChatBot"
version = "0.1.0"
description = "A chatbot project where you can talk to yourself"
authors = [{ name = "Alan Bach", email = "bachalan330@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "torch",
    "transformers",
    "emoji",
    "python-dateutil",
    "peft",
    "protobuf",
    "sentencepiece",
    "bitsandbytes",
    "jsonschema",
]
requires-python = ">=3.12"

[project.scripts]
selfChatBot_preprocess = "DataProcessing.preprocess_data:main"
selfChatBot_train = "FineTune.fine_tune:main"
selfChatBot_play = "Playground.model_play:main"

[tool.setuptools.packages.find]
where = ["src"]